k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mindx-api
  labels:
    app: mindx-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mindx-api
  template:
    metadata:
      labels:
        app: mindx-api
    spec:
      containers:
      - name: api
        image: hoangminhquan01.azurecr.io/mindx-api:v23
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: acr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: mindx-api-service
spec:
  selector:
    app: mindx-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
