k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mindx-frontend
  labels:
    app: mindx-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mindx-frontend
  template:
    metadata:
      labels:
        app: mindx-frontend
    spec:
      containers:
      - name: frontend
        image: hoangminhquan01.azurecr.io/mindx-frontend:v11
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: acr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: mindx-frontend-service
spec:
  selector:
    app: mindx-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
